add_subdirectory(hello EXCLUDE_FROM_ALL)
add_subdirectory(fs_inits EXCLUDE_FROM_ALL)
add_subdirectory(multicore_logger EXCLUDE_FROM_ALL)
add_subdirectory(usb_logger EXCLUDE_FROM_ALL)
add_subdirectory(benchmark EXCLUDE_FROM_ALL)

if (PICO_CYW43_SUPPORTED)
    if(NOT TARGET pico_cyw43_arch)
        message("Skipping Elastic MQTT Client example as support is not available")
    else()
        set(WIFI_SSID     $ENV{WIFI_SSID})
        set(WIFI_PASSWORD $ENV{WIFI_PASSWORD})
        set(MQTT_USER     $ENV{MQTT_USER})
        set(MQTT_PASSWORD $ENV{MQTT_PASSWORD})
        if("${WIFI_SSID}" STREQUAL "")
            message("Skipping some Elastic MQTT Client example as WIFI_SSID is not defined")
        elseif("${WIFI_PASSWORD}" STREQUAL "")
            message("Skipping some Elastic MQTT Client example as WIFI_PASSWORD is not defined")
        elseif("${MQTT_USER}" STREQUAL "")
            message("Skipping some Elastic MQTT Client example as MQTT_USER is not defined")
        elseif("${MQTT_PASSWORD}" STREQUAL "")
            message("Skipping some Elastic MQTT Client examples as MQTT_PASSWORD is not defined")
        else()
            add_subdirectory(elastic_mqtt_client EXCLUDE_FROM_ALL)
        endif()
    endif()
endif()

if (NOT DEFINED ENV{FREERTOS_KERNEL_PATH} AND (NOT FREERTOS_KERNEL_PATH))
    message("Skipping FreeRTOS Benchmark example as support is not available")
else()
    add_subdirectory(freertos_benchmark EXCLUDE_FROM_ALL)
endif()
